# agentic-cloud

./: INSTALL.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  startup.md
docs/: session-recap-2026-06-11.html  v2-redesign.md
scripts/: agentic-cloud-sleep-guard  install-sleep-guard
src/cloud/: __main__.py  bisync.py  cli.py  config.py  doctor.py  mount.py  rclone.py  share.py  systemd.py
systemd/: agentic-cloud-sleep-guard.env.example  agentic-cloud-sleep-guard.service
tests/: test_bisync.py  test_cli.py  test_config.py  test_mount.py  test_rclone.py  test_share.py  test_sleep_guard_assets.py  test_systemd.py
