[project]
name = "agentic-cloud"
version = "0.1.0"
description = "Multi-Nextcloud CLI on top of rclone — per-folder mount modes (full, selective, VFS) and gogcli-parity share URLs."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
cloud = "cloud.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud"]
